# yolov8_ov

./: CMakeLists.txt  README.md  detect.cpp  yolov8.cpp
